// Vitest Snapshot v1

exports[`<SelectedSamples /> > should render when [samples.length=1] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <styled.span>
      1
    </styled.span>
  </label>
  <Styled(Styled(styled.div))
    count={1}
  >
    <styled.div
      disabled={true}
      key="foo"
    >
      bar
    </styled.div>
  </Styled(Styled(styled.div))>
</Fragment>
`;

exports[`<SelectedSamples /> > should return when [samples.length=0] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <styled.span>
      0
    </styled.span>
  </label>
  <Styled(Styled(styled.div))
    count={0}
  />
</Fragment>
`;
